# cohdl

./: .env  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
cohdl/: __init__.py
cohdl/_core/: __init__.py  _array.py  _array.pyi  _bit.py  _bit.pyi  _bit_vector.py  _bit_vector.pyi  _boolean.py  _boolean.pyi  _collect_ast_and_scope.py  _context.py  _context.pyi  _enum.py  _inline.py  _integer.py  _integer.pyi  _intrinsic.py  _intrinsic.pyi  _intrinsic_definitions.py  _intrinsic_definitions.pyi  _intrinsic_operations.py  _intrinsic_operations.pyi  _op.py  _primitive_type.py  _signed.py  _signed.pyi  _source_location.py  _type_qualifier.py  _type_qualifier.pyi  _unsigned.py  _unsigned.pyi
cohdl/std/: __init__.py  _assignable_type.py  _assignable_type.pyi  _compile.py  _context.py  _context.pyi  _core_utility.py  _core_utility.pyi  _crc.py  _exception.py  _exception.pyi  _fixed.py  _fixed.pyi  _formal.py  _prefix.py  _prefix.pyi  _prescaler.py  _record.py  _record.pyi  _template.py  _template.pyi  _uart.py  bitfield.py  bitfield.pyi  enum.py  enum.pyi  reg.py  reg.pyi  sequential_context.py  (+7 more)
introduction/: 01_introduction.ipynb  02_synthesizable_contexts.ipynb  03_object_model.ipynb  04_types.ipynb  05_statements.ipynb  06_functions.ipynb  07_classes.ipynb  08_entities.ipynb  09_coroutines.ipynb  10_intrinsic.ipynb  11_assignable_types.ipynb  12_bitfield.ipynb  13_axi_designs.ipynb  14_advanced_contexts.ipynb  15_simulation.ipynb  README.md
playground/: 01_fixed.ipynb  example.py  example_await.py
tests/: test_bit.py  test_bitvector.py  test_unsigned.py
(+308 files in other folders)
